--- a/demo.html
+++ b/demo.html
@@ -13,10 +13,10 @@ body{
   font-family:-apple-system,BlinkMacSystemFont,"SF Pro Display","Segoe UI",sans-serif;
   background:#05070c;
   color:#fff;
-  overflow:hidden;
+  overflow-x:hidden;
 }
 
-/* ===== BACKGROUND ===== */
+/* BACKGROUND */
 body::before{
   content:"";
   position:fixed;
@@ -35,7 +35,7 @@ body::after{
   z-index:-1;
 }
 
-/* ===== HEADER ===== */
+/* HEADER */
 header{
   position:fixed;
   top:0;
@@ -49,8 +49,6 @@ header{
   backdrop-filter:blur(16px);
   border-bottom:1px solid rgba(255,255,255,.08);
 }
-
-/* MENU LEFT */
 .nav{
   display:flex;
   gap:28px;
@@ -62,7 +60,7 @@ header{
   opacity:.85;
 }
 
-/* LANG RIGHT */
+/* LANG */
 .lang{
   position:fixed;
   top:18px;
@@ -87,74 +85,39 @@ header{
   border-color:#00cfff;
 }
 
-/* ===== MAIN ===== */
+/* MAIN */
 main{
   margin-top:120px;
-  height:calc(100vh - 120px);
-  display:flex;
-  align-items:center;
-  justify-content:center;
+  padding:40px 20px 120px;
+  max-width:1100px;
+  margin-left:auto;
+  margin-right:auto;
 }
 
-/* ===== SLIDER SYSTEM ===== */
-.slider{
-  position:relative;
-  width:90%;
-  max-width:960px;
-  aspect-ratio:16/10;
-  background:rgba(255,255,255,.06);
-  border-radius:30px;
-  overflow:hidden;
-  box-shadow:0 60px 160px rgba(0,0,0,.9);
+/* DEMO STACK */
+.demo{
+  margin-bottom:90px;
+  border-radius:28px;
+  background:rgba(255,255,255,.05);
+  padding:22px;
+  box-shadow:0 50px 140px rgba(0,0,0,.85);
+  animation:floatDemo 6s ease-in-out infinite;
 }
-
-.slides{
-  display:flex;
-  height:100%;
-  transition:transform .8s cubic-bezier(.16,1,.3,1);
-}
-
-.slide{
-  min-width:100%;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-}
-
-.slide img{
-  width:92%;
-  height:auto;
-  object-fit:contain;
+.demo img{
+  width:100%;
   border-radius:22px;
-  box-shadow:0 30px 80px rgba(0,0,0,.8);
+  display:block;
 }
 
-/* ARROWS */
-.arrow{
-  position:absolute;
-  top:50%;
-  transform:translateY(-50%);
-  width:52px;
-  height:52px;
-  border-radius:50%;
-  background:rgba(255,255,255,.12);
-  border:1px solid rgba(255,255,255,.25);
-  color:#fff;
-  font-size:26px;
-  cursor:pointer;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  transition:.25s;
+@keyframes floatDemo{
+  0%,100%{transform:translateY(0)}
+  50%{transform:translateY(-12px)}
 }
-.arrow:hover{background:rgba(255,255,255,.2)}
-.arrow.left{left:16px}
-.arrow.right{right:16px}
 
 /* MOBILE */
 @media(max-width:768px){
-  .slider{
-    aspect-ratio:4/3;
+  .demo{
+    margin-bottom:60px;
   }
 }
 </style>
@@ -177,60 +140,15 @@ main{
 </div>
 
 <main>
-  <div class="slider">
-    <button class="arrow left" onclick="prev()">‹</button>
-
-    <div class="slides" id="slides">
-      <div class="slide"><img src="demo1.jpg"></div>
-      <div class="slide"><img src="demo2.jpg"></div>
-      <div class="slide"><img src="demo3.jpg"></div>
-      <div class="slide"><img src="demo4.jpg"></div>
-      <div class="slide"><img src="demo5.jpg"></div>
-    </div>
-
-    <button class="arrow right" onclick="next()">›</button>
-  </div>
+  <div class="demo"><img src="demo1.jpg" alt="Demo 1"></div>
+  <div class="demo"><img src="demo2.jpg" alt="Demo 2"></div>
+  <div class="demo"><img src="demo3.jpg" alt="Demo 3"></div>
+  <div class="demo"><img src="demo4.jpg" alt="Demo 4"></div>
+  <div class="demo"><img src="demo5.jpg" alt="Demo 5"></div>
 </main>
 
 <script>
-/* ===== AUDIO PREMIUM (SIN MP3 EXTERNO) ===== */
-let ctx;
-function playTap(){
-  if(!ctx) ctx=new AudioContext();
-  const o=ctx.createOscillator();
-  const g=ctx.createGain();
-  o.type="sine";
-  o.frequency.value=880;
-  g.gain.value=0.03;
-  o.connect(g);
-  g.connect(ctx.destination);
-  o.start();
-  o.stop(ctx.currentTime+0.05);
-}
-
-/* ===== SLIDER ===== */
-let index=0;
-const slides=document.getElementById("slides");
-const total=5;
-
-function update(){
-  slides.style.transform=translateX(-${index*100}%);
-}
-
-function next(){
-  playTap();
-  index=(index+1)%total;
-  update();
-}
-function prev(){
-  playTap();
-  index=(index-1+total)%total;
-  update();
-}
-
-setInterval(next,6000);
-
-/* ===== TRANSLATION ===== */
+/* TRANSLATION */
 const esBtn=document.getElementById("esBtn");
 const enBtn=document.getElementById("enBtn");
 
@@ -251,11 +169,6 @@ enBtn.onclick=()=>{
   esBtn.classList.remove("active");
   setLang("en");
 };
-
-/* CLICK SOUND MENU */
-document.querySelectorAll("a,button").forEach(el=>{
-  el.addEventListener("click",playTap);
-});
 </script>
 
 </body>
