--- a/planes.html
+++ b/planes.html
@@ -3,12 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ZenSite | Planes</title>
+<title>Planes | ZenSite</title>
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
-html{scroll-behavior:smooth}
-
 body{
   font-family:-apple-system,BlinkMacSystemFont,"SF Pro Display","Segoe UI",sans-serif;
   background:#05070c;
@@ -19,7 +17,8 @@ body{
 /* BACKGROUND */
 body::before{
   content:"";
-  position:fixed; inset:0;
+  position:fixed;
+  inset:0;
   background:
     radial-gradient(circle at 20% 20%,rgba(0,200,255,.18),transparent 40%),
     radial-gradient(circle at 80% 70%,rgba(120,90,255,.2),transparent 45%),
@@ -28,120 +27,146 @@ body::before{
 }
 body::after{
   content:"";
-  position:fixed; inset:0;
+  position:fixed;
+  inset:0;
   backdrop-filter:blur(90px);
   z-index:-1;
 }
 
 /* HEADER */
 header{
-  position:fixed; top:0; left:0; width:100%;
+  position:fixed;
+  top:0;
+  left:0;
+  width:100%;
   z-index:1000;
-  display:flex; align-items:center;
+  display:flex;
+  align-items:center;
   padding:16px 26px;
   background:rgba(255,255,255,.04);
   backdrop-filter:blur(16px);
   border-bottom:1px solid rgba(255,255,255,.08);
 }
-.nav{display:flex; gap:28px}
-.nav a{
-  color:#fff; text-decoration:none; font-weight:600; opacity:.85
+.nav{
+  display:flex;
+  gap:28px;
 }
-.nav a:hover{opacity:1}
+.nav a{
+  color:#fff;
+  text-decoration:none;
+  font-weight:600;
+  opacity:.85;
+}
 
 /* LANG */
 .lang{
-  position:fixed; top:18px; right:18px;
-  display:flex; gap:6px; z-index:2000;
+  position:fixed;
+  top:18px;
+  right:18px;
+  display:flex;
+  gap:6px;
+  z-index:2000;
 }
 .lang button{
-  padding:3px 8px; font-size:11px; border-radius:12px;
+  padding:3px 8px;
+  font-size:11px;
+  border-radius:12px;
   border:1px solid rgba(255,255,255,.25);
-  background:transparent; color:#fff; font-weight:600; cursor:pointer;
+  background:transparent;
+  color:#fff;
+  font-weight:600;
+  cursor:pointer;
 }
-.lang .active{background:#00cfff; color:#000; border-color:#00cfff}
+.lang .active{
+  background:#00cfff;
+  color:#000;
+  border-color:#00cfff;
+}
 
 /* MAIN */
 main{
   margin-top:120px;
-  padding:40px 20px 160px;
-  max-width:1100px; margin:auto; text-align:center;
+  padding:40px 20px 120px;
+  max-width:1100px;
+  margin:auto;
 }
 
-/* TITLES */
-h1{font-size:clamp(38px,6vw,64px); margin-bottom:18px}
+/* TITLE */
+h1{
+  font-size:clamp(36px,6vw,60px);
+  text-align:center;
+  margin-bottom:18px;
+}
 .subtitle{
-  font-size:18px; opacity:.9; max-width:860px;
-  margin:0 auto 80px; line-height:1.6
+  text-align:center;
+  opacity:.85;
+  max-width:700px;
+  margin:0 auto 60px;
 }
 
 /* PLANS */
 .plans{
   display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(300px,1fr));
-  gap:36px;
+  grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
+  gap:26px;
 }
+
 .plan{
   background:rgba(255,255,255,.06);
-  border-radius:30px; padding:42px 34px;
-  backdrop-filter:blur(16px);
-  box-shadow:0 40px 140px rgba(0,0,0,.85);
-  transition:.45s cubic-bezier(.16,1,.3,1);
+  border-radius:28px;
+  padding:34px 28px;
+  box-shadow:0 40px 120px rgba(0,0,0,.8);
+  display:flex;
+  flex-direction:column;
+  gap:22px;
 }
-.plan:hover{
-  transform:translateY(-18px);
-  box-shadow:0 70px 180px rgba(0,0,0,.95);
+
+.plan h2{
+  font-size:26px;
 }
-.plan h2{font-size:26px; margin-bottom:6px}
-.plan small{display:block; opacity:.75; margin-bottom:18px}
-.price{font-size:42px; font-weight:800; margin:20px 0; color:#00cfff}
+
+.price{
+  font-size:46px;
+  color:#00cfff;
+  font-weight:700;
+}
+
+.plan p{
+  opacity:.9;
+  line-height:1.6;
+}
+
 .features{
-  text-align:left; margin:30px 0 44px; line-height:1.75; opacity:.95
+  display:flex;
+  flex-direction:column;
+  gap:12px;
+  font-size:15px;
 }
-.btn{
-  display:inline-block; padding:14px 32px; border-radius:30px;
-  background:#00cfff; color:#000; text-decoration:none; font-weight:700;
-}
-.btn:hover{opacity:.85}
 
-/* COMPARISON */
-.compare{
-  margin:90px auto 0; max-width:1000px;
-  background:rgba(255,255,255,.05);
-  border-radius:28px; padding:28px;
-  backdrop-filter:blur(14px);
-  box-shadow:0 40px 140px rgba(0,0,0,.85);
+.features span::before{
+  content:"✓";
+  color:#00cfff;
+  margin-right:10px;
 }
-.compare h3{font-size:28px; margin-bottom:18px}
-.table{
-  display:grid; grid-template-columns:2fr 1fr 1fr 1fr; gap:14px;
-  text-align:left;
-}
-.cell{
-  padding:14px; border-radius:14px;
-  background:rgba(255,255,255,.04)
-}
-.head{font-weight:700; text-align:center}
-.yes{color:#8dffb2}
-.no{opacity:.45}
 
-/* CTA FINAL */
-.cta{
-  margin:90px auto 0; max-width:900px;
-  background:linear-gradient(135deg,rgba(0,200,255,.18),rgba(120,90,255,.18));
-  border:1px solid rgba(255,255,255,.15);
-  border-radius:32px; padding:44px 28px;
-  backdrop-filter:blur(18px);
+button.cta{
+  margin-top:18px;
+  padding:14px;
+  border:none;
+  border-radius:22px;
+  background:#00cfff;
+  color:#000;
+  font-weight:700;
+  font-size:15px;
+  cursor:pointer;
 }
-.cta h3{font-size:32px; margin-bottom:14px}
-.cta p{opacity:.95; margin-bottom:26px}
-.cta .btn{font-size:16px}
 
-/* MOBILE */
-@media(max-width:768px){
-  .price{font-size:36px}
-  .table{grid-template-columns:1fr; gap:10px}
-  .head{text-align:left}
+/* FOOTER */
+footer{
+  margin-top:100px;
+  text-align:center;
+  opacity:.5;
+  font-size:13px;
 }
 </style>
 </head>
@@ -163,113 +188,101 @@ h1{font-size:clamp(38px,6vw,64px); margin-bottom:18px}
 </div>
 
 <main>
+  <h1 data-es="Planes ZenSite" data-en="ZenSite Plans">Planes ZenSite</h1>
+  <p class="subtitle"
+     data-es="Pagas una sola vez. Diseño premium. La web es 100% tuya."
+     data-en="One-time payment. Premium design. The website is 100% yours.">
+     Pagas una sola vez. Diseño premium. La web es 100% tuya.
+  </p>
 
-<h1 data-es="Planes ZenSite" data-en="ZenSite Plans">Planes ZenSite</h1>
-<p class="subtitle"
-   data-es="No vendemos páginas genéricas. Creamos sistemas web profesionales diseñados para generar confianza, vender y escalar negocios."
-   data-en="We don’t sell generic websites. We build professional web systems designed to build trust, sell, and scale businesses.">
-</p>
+  <section class="plans">
 
-<div class="plans">
+    <!-- PLAN Z -->
+    <div class="plan">
+      <h2>Plan Z</h2>
+      <div class="price">$200</div>
+      <p data-es="Ideal para negocios que necesitan presencia profesional clara y efectiva."
+         data-en="Ideal for businesses that need a clear and professional online presence.">
+         Ideal para negocios que necesitan presencia profesional clara y efectiva.
+      </p>
+      <div class="features">
+        <span data-es="Landing page optimizada para convertir" data-en="Conversion-focused landing page"></span>
+        <span data-es="Diseño premium, no plantilla" data-en="Premium custom design"></span>
+        <span data-es="Optimizada para móvil" data-en="Mobile optimized"></span>
+        <span data-es="Contacto directo por WhatsApp" data-en="Direct WhatsApp contact"></span>
+      </div>
+      <button class="cta" onclick="contact('Plan Z $200')">Contactar</button>
+    </div>
 
-<!-- Z -->
-<div class="plan">
-  <h2>Z</h2>
-  <small data-es="Presencia profesional" data-en="Professional presence"></small>
-  <div class="price">$200</div>
-  <div class="features"
-       data-es="• Landing page profesional<br>• Diseño moderno y limpio<br>• Optimizada para celular<br>• Carga rápida<br>• Web 100% tuya sin mensualidades"
-       data-en="• Professional landing page<br>• Clean modern design<br>• Mobile optimized<br>• Fast loading<br>• 100% owned website, no monthly fees">
-  </div>
-  <a class="btn" target="_blank"
-     href="https://wa.me/15027942412?text=Hola%2C%20quiero%20el%20plan%20Z%20de%20%24200"
-     data-es="Contactar" data-en="Contact">Contactar</a>
-</div>
+    <!-- PLAN Z+ -->
+    <div class="plan">
+      <h2>Plan Z+</h2>
+      <div class="price">$480</div>
+      <p data-es="Para marcas que quieren crecer y verse sólidas y profesionales."
+         data-en="For brands that want to grow and look solid and professional.">
+         Para marcas que quieren crecer y verse sólidas y profesionales.
+      </p>
+      <div class="features">
+        <span data-es="Web multi-sección completa" data-en="Multi-section website"></span>
+        <span data-es="Mejor jerarquía y estructura" data-en="Advanced structure and hierarchy"></span>
+        <span data-es="Animaciones tipo app" data-en="App-like animations"></span>
+        <span data-es="Preparada para SEO base" data-en="SEO-ready foundation"></span>
+      </div>
+      <button class="cta" onclick="contact('Plan Z+ $480')">Contactar</button>
+    </div>
 
-<!-- Z+ -->
-<div class="plan">
-  <h2>Z+</h2>
-  <small data-es="Marca que convierte" data-en="Brand that converts"></small>
-  <div class="price">$480</div>
-  <div class="features"
-       data-es="• Web completa multi-sección<br>• Branding visual premium<br>• Animaciones suaves<br>• Optimización avanzada<br>• Experiencia coherente en todos los dispositivos"
-       data-en="• Full multi-section website<br>• Premium visual branding<br>• Smooth animations<br>• Advanced optimization<br>• Consistent experience across devices">
-  </div>
-  <a class="btn" target="_blank"
-     href="https://wa.me/15027942412?text=Hola%2C%20quiero%20el%20plan%20Z%2B%20de%20%24480"
-     data-es="Contactar" data-en="Contact">Contactar</a>
-</div>
+    <!-- PLAN PREMIUM -->
+    <div class="plan">
+      <h2>Z Premium</h2>
+      <div class="price">$720</div>
+      <p data-es="Pensado para vender. Tiendas online, inventario y escalabilidad real."
+         data-en="Built to sell. Online stores, inventory and real scalability.">
+         Pensado para vender. Tiendas online, inventario y escalabilidad real.
+      </p>
+      <div class="features">
+        <span data-es="Tienda online completa" data-en="Full e-commerce store"></span>
+        <span data-es="Carrito de compras" data-en="Shopping cart"></span>
+        <span data-es="Gestión de productos e inventario" data-en="Inventory & product management"></span>
+        <span data-es="Diseño tipo sistema / app" data-en="System-level app design"></span>
+      </div>
+      <button class="cta" onclick="contact('Z Premium $720')">Contactar</button>
+    </div>
 
-<!-- Z PREMIUM -->
-<div class="plan">
-  <h2>Z Premium</h2>
-  <small data-es="Sistema completo de ventas" data-en="Complete sales system"></small>
-  <div class="price">$720</div>
-  <div class="features"
-       data-es="• Tienda online completa con carrito de compras<br>• Gestión de productos e inventario<br>• Sistema web tipo app, fluido y moderno<br>• Diseño exclusivo creado a medida<br>• Optimización total para ventas y crecimiento<br>• Soporte prioritario y ajustes incluidos"
-       data-en="• Full online store with shopping cart<br>• Product and inventory management<br>• App-like web system, smooth and modern<br>• Fully custom exclusive design<br>• Optimized for sales and scalability<br>• Priority support and revisions included">
-  </div>
-  <a class="btn" target="_blank"
-     href="https://wa.me/15027942412?text=Hola%2C%20quiero%20el%20plan%20Z%20Premium%20de%20%24720%20con%20tienda%20online"
-     data-es="Crear mi tienda online" data-en="Build my online store">
-     Crear mi tienda online
-  </a>
-</div>
-
-</div>
-
-<!-- COMPARISON -->
-<div class="compare">
-  <h3 data-es="Comparación rápida" data-en="Quick comparison"></h3>
-  <div class="table">
-    <div class="cell head" data-es="Características" data-en="Features"></div>
-    <div class="cell head">Z</div>
-    <div class="cell head">Z+</div>
-    <div class="cell head">Z Premium</div>
-
-    <div class="cell" data-es="Diseño profesional" data-en="Professional design"></div>
-    <div class="cell yes">✔</div><div class="cell yes">✔</div><div class="cell yes">✔</div>
-
-    <div class="cell" data-es="Multi-secciones" data-en="Multi-sections"></div>
-    <div class="cell no">—</div><div class="cell yes">✔</div><div class="cell yes">✔</div>
-
-    <div class="cell" data-es="Animaciones premium" data-en="Premium animations"></div>
-    <div class="cell no">—</div><div class="cell yes">✔</div><div class="cell yes">✔</div>
-
-    <div class="cell" data-es="Tienda / Carrito / Inventario" data-en="Store / Cart / Inventory"></div>
-    <div class="cell no">—</div><div class="cell no">—</div><div class="cell yes">✔</div>
-
-    <div class="cell" data-es="Diseño exclusivo a medida" data-en="Fully custom design"></div>
-    <div class="cell no">—</div><div class="cell no">—</div><div class="cell yes">✔</div>
-
-    <div class="cell" data-es="Soporte prioritario" data-en="Priority support"></div>
-    <div class="cell no">—</div><div class="cell no">—</div><div class="cell yes">✔</div>
-  </div>
-</div>
-
-<!-- CTA FINAL -->
-<div class="cta">
-  <h3 data-es="¿Listo para llevar tu negocio al siguiente nivel?"
-      data-en="Ready to take your business to the next level?"></h3>
-  <p data-es="Elige el plan que se adapte a tu objetivo y contáctanos. Te guiamos paso a paso."
-     data-en="Choose the plan that fits your goal and contact us. We guide you step by step."></p>
-  <a class="btn" target="_blank"
-     href="https://wa.me/15027942412?text=Hola%2C%20quiero%20asesor%C3%ADa%20para%20elegir%20un%20plan%20ZenSite"
-     data-es="Hablar ahora" data-en="Chat now">Hablar ahora</a>
-</div>
-
+  </section>
 </main>
 
+<footer>
+  © 2025 ZenSite. Todos los derechos reservados.
+</footer>
+
 <script>
+/* TRANSLATION */
 const esBtn=document.getElementById("esBtn");
 const enBtn=document.getElementById("enBtn");
+
 function setLang(lang){
   document.querySelectorAll("[data-"+lang+"]").forEach(el=>{
-    el.innerHTML = el.dataset[lang];
+    el.textContent = el.dataset[lang];
   });
 }
-esBtn.onclick=()=>{esBtn.classList.add("active"); enBtn.classList.remove("active"); setLang("es");};
-enBtn.onclick=()=>{esBtn.classList.remove("active"); enBtn.classList.add("active"); setLang("en");};
+
+esBtn.onclick=()=>{
+  esBtn.classList.add("active");
+  enBtn.classList.remove("active");
+  setLang("es");
+};
+
+enBtn.onclick=()=>{
+  enBtn.classList.add("active");
+  esBtn.classList.remove("active");
+  setLang("en");
+};
+
+/* WHATSAPP */
+function contact(plan){
+  const msg = encodeURIComponent("Hola, quiero contratar el "+plan+". Me gustaría más información.");
+  window.open("https://wa.me/15027942412?text="+msg,"_blank");
+}
 </script>
 
 </body>
