--- a/planes.html
+++ b/planes.html
@@ -7,8 +7,10 @@
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
+html{scroll-behavior:smooth}
+
 body{
-  font-family:-apple-system,BlinkMacSystemFont,"SF Pro Display","Segoe UI",sans-serif;
+  font-family:-apple-system,BlinkMacSystemFont,"SF Pro Display","Inter","Segoe UI",sans-serif;
   background:#05070c;
   color:#fff;
   overflow-x:hidden;
@@ -20,8 +22,8 @@ body::before{
   position:fixed;
   inset:0;
   background:
-    radial-gradient(circle at 20% 20%,rgba(0,200,255,.18),transparent 40%),
-    radial-gradient(circle at 80% 70%,rgba(120,90,255,.2),transparent 45%),
+    radial-gradient(circle at 15% 20%,rgba(0,200,255,.18),transparent 40%),
+    radial-gradient(circle at 85% 75%,rgba(120,90,255,.22),transparent 45%),
     #05070c;
   z-index:-2;
 }
@@ -40,8 +42,6 @@ header{
   left:0;
   width:100%;
   z-index:1000;
-  display:flex;
-  align-items:center;
   padding:16px 26px;
   background:rgba(255,255,255,.04);
   backdrop-filter:blur(16px);
@@ -68,14 +68,13 @@ header{
   z-index:2000;
 }
 .lang button{
-  padding:3px 8px;
+  padding:4px 10px;
   font-size:11px;
-  border-radius:12px;
+  border-radius:14px;
   border:1px solid rgba(255,255,255,.25);
   background:transparent;
   color:#fff;
   font-weight:600;
-  cursor:pointer;
 }
 .lang .active{
   background:#00cfff;
@@ -91,79 +90,99 @@ main{
   margin:auto;
 }
 
-/* TITLE */
 h1{
-  font-size:clamp(36px,6vw,60px);
   text-align:center;
-  margin-bottom:18px;
+  font-size:clamp(40px,6vw,64px);
+  font-weight:700;
+  letter-spacing:-.02em;
 }
 .subtitle{
   text-align:center;
+  margin:16px auto 70px;
+  max-width:760px;
+  font-size:clamp(16px,2.5vw,19px);
   opacity:.85;
-  max-width:700px;
-  margin:0 auto 60px;
+  line-height:1.6;
 }
 
-/* PLANS */
+/* PLANS GRID */
 .plans{
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
-  gap:26px;
+  gap:30px;
 }
 
+/* PLAN CARD */
 .plan{
-  background:rgba(255,255,255,.06);
-  border-radius:28px;
-  padding:34px 28px;
-  box-shadow:0 40px 120px rgba(0,0,0,.8);
+  background:linear-gradient(180deg,rgba(255,255,255,.08),rgba(255,255,255,.02));
+  border-radius:30px;
+  padding:36px 32px 40px;
+  box-shadow:0 50px 160px rgba(0,0,0,.85);
   display:flex;
   flex-direction:column;
   gap:22px;
+  position:relative;
+}
+
+/* PREMIUM HIGHLIGHT */
+.plan.premium{
+  outline:2px solid rgba(0,200,255,.35);
+  box-shadow:0 60px 180px rgba(0,200,255,.25);
 }
 
 .plan h2{
   font-size:26px;
+  font-weight:700;
+  letter-spacing:-.01em;
 }
 
 .price{
-  font-size:46px;
+  font-size:48px;
+  font-weight:800;
   color:#00cfff;
-  font-weight:700;
+  letter-spacing:-.03em;
 }
 
 .plan p{
+  font-size:15.5px;
   opacity:.9;
   line-height:1.6;
 }
 
+/* FEATURES */
 .features{
   display:flex;
   flex-direction:column;
-  gap:12px;
+  gap:14px;
   font-size:15px;
 }
-
+.features span{
+  display:flex;
+  align-items:flex-start;
+}
 .features span::before{
   content:"✓";
   color:#00cfff;
-  margin-right:10px;
+  margin-right:12px;
+  font-weight:700;
 }
 
+/* CTA */
 button.cta{
-  margin-top:18px;
-  padding:14px;
+  margin-top:14px;
+  padding:15px;
   border:none;
-  border-radius:22px;
+  border-radius:26px;
   background:#00cfff;
   color:#000;
-  font-weight:700;
+  font-weight:800;
   font-size:15px;
   cursor:pointer;
 }
 
 /* FOOTER */
 footer{
-  margin-top:100px;
+  margin-top:120px;
   text-align:center;
   opacity:.5;
   font-size:13px;
@@ -175,75 +194,74 @@ footer{
 
 <header>
   <nav class="nav">
-    <a href="index.html" data-es="Inicio" data-en="Home">Inicio</a>
-    <a href="demo.html" data-es="Demos" data-en="Demos">Demos</a>
-    <a href="planes.html" data-es="Planes" data-en="Plans">Planes</a>
-    <a href="nosotros.html" data-es="Nosotros" data-en="About">Nosotros</a>
+    <a href="index.html">Inicio</a>
+    <a href="demo.html">Demos</a>
+    <a href="planes.html">Planes</a>
+    <a href="nosotros.html">Nosotros</a>
   </nav>
 </header>
 
 <div class="lang">
-  <button id="esBtn" class="active">ES</button>
-  <button id="enBtn">EN</button>
+  <button class="active">ES</button>
+  <button>EN</button>
 </div>
 
 <main>
-  <h1 data-es="Planes ZenSite" data-en="ZenSite Plans">Planes ZenSite</h1>
-  <p class="subtitle"
-     data-es="Pagas una sola vez. Diseño premium. La web es 100% tuya."
-     data-en="One-time payment. Premium design. The website is 100% yours.">
-     Pagas una sola vez. Diseño premium. La web es 100% tuya.
+  <h1>Planes ZenSite</h1>
+  <p class="subtitle">
+    Pagas una sola vez. Diseño premium orientado a resultados.
+    Sin mensualidades. La web es 100% tuya.
   </p>
 
   <section class="plans">
 
-    <!-- PLAN Z -->
+    <!-- Z -->
     <div class="plan">
       <h2>Plan Z</h2>
       <div class="price">$200</div>
-      <p data-es="Ideal para negocios que necesitan presencia profesional clara y efectiva."
-         data-en="Ideal for businesses that need a clear and professional online presence.">
-         Ideal para negocios que necesitan presencia profesional clara y efectiva.
+      <p>
+        Para negocios que necesitan verse profesionales,
+        generar confianza y convertir desde el primer día.
       </p>
       <div class="features">
-        <span data-es="Landing page optimizada para convertir" data-en="Conversion-focused landing page"></span>
-        <span data-es="Diseño premium, no plantilla" data-en="Premium custom design"></span>
-        <span data-es="Optimizada para móvil" data-en="Mobile optimized"></span>
-        <span data-es="Contacto directo por WhatsApp" data-en="Direct WhatsApp contact"></span>
+        <span>Landing optimizada para conversión</span>
+        <span>Diseño premium personalizado</span>
+        <span>Experiencia móvil perfecta</span>
+        <span>Contacto directo por WhatsApp</span>
       </div>
       <button class="cta" onclick="contact('Plan Z $200')">Contactar</button>
     </div>
 
-    <!-- PLAN Z+ -->
+    <!-- Z+ -->
     <div class="plan">
       <h2>Plan Z+</h2>
       <div class="price">$480</div>
-      <p data-es="Para marcas que quieren crecer y verse sólidas y profesionales."
-         data-en="For brands that want to grow and look solid and professional.">
-         Para marcas que quieren crecer y verse sólidas y profesionales.
+      <p>
+        Pensado para marcas que quieren crecer,
+        posicionarse y ofrecer una experiencia sólida.
       </p>
       <div class="features">
-        <span data-es="Web multi-sección completa" data-en="Multi-section website"></span>
-        <span data-es="Mejor jerarquía y estructura" data-en="Advanced structure and hierarchy"></span>
-        <span data-es="Animaciones tipo app" data-en="App-like animations"></span>
-        <span data-es="Preparada para SEO base" data-en="SEO-ready foundation"></span>
+        <span>Web multi-sección completa</span>
+        <span>Animaciones tipo app</span>
+        <span>Estructura profesional escalable</span>
+        <span>Base optimizada para SEO</span>
       </div>
       <button class="cta" onclick="contact('Plan Z+ $480')">Contactar</button>
     </div>
 
-    <!-- PLAN PREMIUM -->
-    <div class="plan">
+    <!-- PREMIUM -->
+    <div class="plan premium">
       <h2>Z Premium</h2>
       <div class="price">$720</div>
-      <p data-es="Pensado para vender. Tiendas online, inventario y escalabilidad real."
-         data-en="Built to sell. Online stores, inventory and real scalability.">
-         Pensado para vender. Tiendas online, inventario y escalabilidad real.
+      <p>
+        Solución completa para vender productos,
+        gestionar inventario y escalar tu negocio.
       </p>
       <div class="features">
-        <span data-es="Tienda online completa" data-en="Full e-commerce store"></span>
-        <span data-es="Carrito de compras" data-en="Shopping cart"></span>
-        <span data-es="Gestión de productos e inventario" data-en="Inventory & product management"></span>
-        <span data-es="Diseño tipo sistema / app" data-en="System-level app design"></span>
+        <span>Tienda online completa</span>
+        <span>Carrito de compras profesional</span>
+        <span>Gestión de inventario y productos</span>
+        <span>Diseño tipo sistema / app premium</span>
       </div>
       <button class="cta" onclick="contact('Z Premium $720')">Contactar</button>
     </div>
@@ -256,31 +274,8 @@ footer{
 </footer>
 
 <script>
-/* TRANSLATION */
-const esBtn=document.getElementById("esBtn");
-const enBtn=document.getElementById("enBtn");
-
-function setLang(lang){
-  document.querySelectorAll("[data-"+lang+"]").forEach(el=>{
-    el.textContent = el.dataset[lang];
-  });
-}
-
-esBtn.onclick=()=>{
-  esBtn.classList.add("active");
-  enBtn.classList.remove("active");
-  setLang("es");
-};
-
-enBtn.onclick=()=>{
-  enBtn.classList.add("active");
-  esBtn.classList.remove("active");
-  setLang("en");
-};
-
-/* WHATSAPP */
 function contact(plan){
-  const msg = encodeURIComponent("Hola, quiero contratar el "+plan+". Me gustaría más información.");
+  const msg = encodeURIComponent("Hola, quiero contratar el "+plan+".");
   window.open("https://wa.me/15027942412?text="+msg,"_blank");
 }
 </script>
