--- a/index.html
+++ b/index.html
@@ -5,17 +5,21 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>ZenSite</title>
 
-<!-- PREMIUM FONTS -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Space+Grotesk:wght@700;800&display=swap" rel="stylesheet">
+<!-- ===== GOOGLE ANALYTICS (REEMPLAZA G-XXXXXXX) ===== -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXX"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+gtag('config', 'G-XXXXXXX');
+</script>
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
 html{scroll-behavior:smooth}
 
 body{
-  font-family:'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+  font-family:-apple-system,BlinkMacSystemFont,"SF Pro Display","Inter","Segoe UI",sans-serif;
   background:#05070c;
   color:#fff;
   overflow-x:hidden;
@@ -28,7 +32,7 @@ body::before{
   inset:0;
   background:
     radial-gradient(circle at 20% 20%,rgba(0,200,255,.18),transparent 40%),
-    radial-gradient(circle at 80% 70%,rgba(120,90,255,.2),transparent 45%),
+    radial-gradient(circle at 80% 70%,rgba(120,90,255,.22),transparent 45%),
     #05070c;
   z-index:-2;
 }
@@ -43,19 +47,14 @@ body::after{
 /* HEADER */
 header{
   position:fixed;
-  top:0;
-  left:0;
+  top:0;left:0;
   width:100%;
   z-index:1000;
-  display:flex;
-  align-items:center;
-  padding:16px 26px;
+  padding:18px 26px;
   background:rgba(255,255,255,.04);
   backdrop-filter:blur(16px);
   border-bottom:1px solid rgba(255,255,255,.08);
 }
-
-/* MENU */
 .nav{
   display:flex;
   gap:28px;
@@ -70,107 +69,95 @@ header{
 /* LANG */
 .lang{
   position:fixed;
-  top:16px;
-  right:16px;
+  top:18px;
+  right:18px;
   display:flex;
   gap:6px;
-  z-index:2000;
 }
 .lang button{
-  padding:3px 8px;
+  padding:4px 9px;
   font-size:11px;
-  border-radius:12px;
+  border-radius:14px;
   border:1px solid rgba(255,255,255,.25);
   background:transparent;
   color:#fff;
-  font-weight:600;
+  font-weight:700;
   cursor:pointer;
 }
 .lang .active{
   background:#00cfff;
   color:#000;
-  border-color:#00cfff;
 }
 
 /* MAIN */
 main{
-  margin-top:120px; /* ⬅ SUBE TODO UN POCO */
-  padding:40px 20px 200px;
+  margin-top:140px;
+  padding:40px 20px 160px;
   max-width:1100px;
-  margin-left:auto;
-  margin-right:auto;
+  margin:auto;
   text-align:center;
 }
 
 /* TITLE */
 h1{
-  font-family:'Space Grotesk', sans-serif;
-  font-size:clamp(50px,7vw,92px);
-  font-weight:800;
-  letter-spacing:-1.2px;
-  margin-bottom:14px; /* ⬅ MÁS COMPACTO */
+  font-size:clamp(44px,6vw,78px);
+  margin-bottom:24px;
+  position:relative;
 }
 h1::after{
   content:"";
-  display:block;
-  margin:14px auto 0;
+  position:absolute;
+  left:50%;
+  bottom:-14px;
+  transform:translateX(-50%);
   width:180px;
   height:6px;
   background:#00cfff;
-  filter:blur(20px);
+  filter:blur(18px);
   animation:neon 3s ease-in-out infinite;
 }
 @keyframes neon{
-  0%,100%{opacity:.55}
+  0%,100%{opacity:.6}
   50%{opacity:1}
 }
 
 /* COPY */
-.copy{
-  max-width:920px;
-  margin:0 auto 44px; /* ⬅ SUBE FRASE */
-}
-.copy .lead{
-  font-size:clamp(20px,2.8vw,26px);
-  font-weight:600;
-  line-height:1.45;
-  letter-spacing:-0.3px;
-  margin-bottom:10px;
-}
-.copy .sub{
-  font-size:clamp(17px,2.3vw,21px);
-  font-weight:500;
-  opacity:.9;
-  line-height:1.6;
+p{
+  font-size:clamp(18px,2.6vw,22px);
+  line-height:1.65;
+  opacity:.95;
+  max-width:880px;
+  margin:0 auto 48px;
 }
 
 /* PREVIEW */
 .preview{
-  margin-top:28px;
-  border-radius:34px;
+  margin-top:30px;
+  border-radius:30px;
   background:rgba(255,255,255,.05);
-  padding:22px;
-  box-shadow:0 60px 160px rgba(0,0,0,.9);
-  animation:floatLaptop 8s ease-in-out infinite; /* ⬅ MÁS SUAVE */
+  padding:20px;
+  box-shadow:0 50px 140px rgba(0,0,0,.9);
+  animation:floatLaptop 6s ease-in-out infinite;
 }
 .preview img{
   width:100%;
-  border-radius:26px;
+  border-radius:22px;
 }
 @keyframes floatLaptop{
   0%,100%{transform:translateY(0)}
-  50%{transform:translateY(-8px)} /* ⬅ MENOS MOVIMIENTO */
+  50%{transform:translateY(-12px)}
 }
 
-/* OFFER */
+/* OFFER FLOAT */
 .offer{
-  margin:52px auto 0;
-  display:inline-block;
-  padding:10px 18px;
-  border-radius:22px;
+  position:fixed;
+  left:26px;
+  bottom:120px;
+  padding:10px 16px;
+  border-radius:20px;
   background:rgba(0,200,255,.18);
   border:1px solid rgba(0,200,255,.35);
-  font-weight:600;
+  font-weight:700;
   font-size:14px;
   backdrop-filter:blur(14px);
   animation:floatOffer 4s ease-in-out infinite;
@@ -180,13 +167,48 @@ h1::after{
   50%{transform:translateY(-6px)}
 }
 
+/* POPUP */
+.popup{
+  position:fixed;
+  inset:0;
+  background:rgba(0,0,0,.6);
+  display:none;
+  align-items:center;
+  justify-content:center;
+  z-index:3000;
+}
+.popup-box{
+  background:#0b0f1a;
+  border-radius:26px;
+  padding:34px 30px;
+  max-width:380px;
+  text-align:center;
+  box-shadow:0 40px 120px rgba(0,0,0,.9);
+}
+.popup-box h3{
+  font-size:22px;
+  margin-bottom:14px;
+}
+.popup-box p{
+  font-size:16px;
+  margin-bottom:22px;
+}
+.popup-box button{
+  padding:14px 22px;
+  border:none;
+  border-radius:18px;
+  background:#00cfff;
+  color:#000;
+  font-weight:800;
+  cursor:pointer;
+}
+
 /* FOOTER */
 footer{
-  margin-top:120px;
-  padding:40px 20px;
   text-align:center;
+  padding:50px 20px 30px;
+  opacity:.5;
   font-size:13px;
-  opacity:.6;
 }
 </style>
 </head>
@@ -210,63 +232,64 @@ footer{
 <main>
   <h1>ZenSite</h1>
 
-  <div class="copy">
-    <div class="lead"
-      data-es="¿Quieres llevar tu negocio al siguiente nivel?"
-      data-en="Want to take your business to the next level?">
-      ¿Quieres llevar tu negocio al siguiente nivel?
-    </div>
-
-    <div class="sub"
-      data-es="Creamos experiencias digitales de alto nivel que transmiten confianza, elevan tu marca y convierten visitas en clientes reales. Llegaste al lugar correcto."
-      data-en="We create high-level digital experiences that build trust, elevate your brand, and turn visits into real clients. You’re in the right place.">
-      Creamos experiencias digitales de alto nivel que transmiten confianza, elevan tu marca y convierten visitas en clientes reales. Llegaste al lugar correcto.
-    </div>
-  </div>
+  <p id="copy"
+     data-es="Si tu web no transmite confianza en los primeros 5 segundos, tu cliente se va. En ZenSite creamos experiencias digitales que hacen que te tomen en serio desde el primer vistazo."
+     data-en="If your website doesn’t build trust in the first 5 seconds, your client leaves. At ZenSite we build digital experiences that make people take you seriously from the first glance.">
+    Si tu web no transmite confianza en los primeros 5 segundos, tu cliente se va. En ZenSite creamos experiencias digitales que hacen que te tomen en serio desde el primer vistazo.
+  </p>
 
   <div class="preview">
     <img src="background.jpg" alt="ZenSite preview">
   </div>
-
-  <div class="offer"
-       data-es="🎁 15% OFF · Diciembre"
-       data-en="🎁 15% OFF · December">
-    🎁 15% OFF · Diciembre
-  </div>
 </main>
+
+<div class="offer"
+     data-es="🎁 15% OFF · Diciembre"
+     data-en="🎁 15% OFF · December">
+  🎁 15% OFF · Diciembre
+</div>
 
 <footer>
   © 2025 ZenSite. Todos los derechos reservados.
 </footer>
 
-<script>
-/* TAP SOUND */
-const ctx=new (window.AudioContext||window.webkitAudioContext)();
-function playTap(){
-  const o=ctx.createOscillator();
-  const g=ctx.createGain();
-  o.type="sine";
-  o.frequency.value=880;
-  g.gain.value=0.04;
-  o.connect(g);
-  g.connect(ctx.destination);
-  o.start();
-  o.stop(ctx.currentTime+0.04);
-}
-document.querySelectorAll("a,button").forEach(el=>{
-  el.addEventListener("click",playTap);
-});
+<!-- POPUP -->
+<div class="popup" id="popup">
+  <div class="popup-box">
+    <h3 id="popupTitle">🎁 15% OFF</h3>
+    <p id="popupText">Plan Z+ es el más contratado este mes.</p>
+    <button onclick="goWhatsapp()">Hablar por WhatsApp</button>
+  </div>
+</div>
 
+<script>
 /* TRANSLATION */
 const esBtn=document.getElementById("esBtn");
 const enBtn=document.getElementById("enBtn");
 function setLang(lang){
   document.querySelectorAll("[data-"+lang+"]").forEach(el=>{
-    el.textContent=el.dataset[lang];
+    el.textContent = el.dataset[lang];
   });
 }
-esBtn.onclick=()=>{esBtn.classList.add("active");enBtn.classList.remove("active");setLang("es")};
-enBtn.onclick=()=>{enBtn.classList.add("active");esBtn.classList.remove("active");setLang("en")};
+esBtn.onclick=()=>{esBtn.classList.add("active");enBtn.classList.remove("active");setLang("es");};
+enBtn.onclick=()=>{enBtn.classList.add("active");esBtn.classList.remove("active");setLang("en");};
+
+/* POPUP LOGIC */
+if(!localStorage.getItem("popupSeen")){
+  setTimeout(()=>{
+    document.getElementById("popup").style.display="flex";
+    localStorage.setItem("popupSeen","yes");
+  },8000);
+}
+function goWhatsapp(){
+  gtag('event','popup_whatsapp');
+  window.open("https://wa.me/15027942412","_blank");
+}
+
+/* EVENTS */
+document.querySelectorAll("a").forEach(a=>{
+  a.addEventListener("click",()=>gtag('event','menu_click',{label:a.textContent}));
+});
 </script>
 
 </body>
